Creo formulario y estilos CSS para la pag web

--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MiPrimeraPágina</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles/styles.css">
 </head>
 <body>
-    <h1>Hola Mundo</h1>
+    <h1>Probando HTML y GitHub</h1>
     <p>Este cambio fue hecho en la rama "modificar-index"</p>
+    <br>
+    <div>
+        <a href="/navegador/form.html">Formulario de contacto</a>
+    </div>
 </body>
 </html>
